Books, FAQs, and profile photo rounding

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
           <a href="{{ '/portfolio/' | relative_url }}" class="{% if page.url == '/portfolio/' %}active{% endif %}">Portfolio</a>
           <a href="{{ '/resume/' | relative_url }}" class="{% if page.url == '/resume/' %}active{% endif %}">Resume</a>
           <a href="{{ '/contact/' | relative_url }}" class="{% if page.url == '/contact/' %}active{% endif %}">Contact</a>
+          <a href="{{ '/reading/' | relative_url }}" class="{% if page.url == '/reading/' %}active{% endif %}">What I'm Reading</a>
+          <a href="{{ '/faqs/' | relative_url }}" class="{% if page.url == '/faqs/' %}active{% endif %}">FAQs</a>
         </nav>
       </div>
     </header>
