--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,7 @@ a:focus-visible {
 .menu-button {
   font-family: inherit;
   font-size: 0.95rem;
+  line-height: 1.1;
   background: transparent;
   color: #1f2a22;
   border: none;
@@ -189,9 +190,10 @@ a:focus-visible {
 
 .menu-panel a {
   color: #1f2a22;
-  padding: 0.4rem 0.6rem;
+  padding: 0.2rem 0.6rem;
   border-radius: 6px;
   white-space: normal;
+  line-height: 1.1;
 }
 
 .menu-panel a:hover,
