--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ body {
   background: #E0FFFB;
   color: var(--text);
   line-height: 1.6;
+  cursor: url("/assets/cursor/paintbrush.svg") 2 28, auto;
 }
 
 h1,
@@ -33,6 +34,7 @@ h4,
 a {
   color: var(--link);
   text-decoration: none;
+  cursor: pointer;
 }
 
 a:hover,
